--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </label>
             <div class="menu">
                 <ul class="list">
-                    <li><a href="#acerca">Acerca</a></li>
+                    <li><a href="#acerca">Sobre mi</a></li>
                     <li><a href="#tecnologias">Tecnologias</a></li>
                     <li><a href="#proyectos">Proyectos</a></li>
                     <li><a href="#contacto">Contacto</a></li>
@@ -68,21 +68,29 @@
         <section class="container" id="acerca" style="min-height: 80vh;">
             <div class="row">
                 <div class="col">
-                    <h1 style="text-align: center; padding: 1em;">Acerca de mi </h1>
+                    <h1 style="text-align: center; padding: 1em;">Sobre mi </h1>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col">
-                    <img src="./assets/img/portfolio-1.jpg" width="100%" height="100%" alt="Pedro Seneriz">
+                    <img src="./assets/img/portfolio-1.jpg" width="100%" alt="Pedro Seneriz">
                 </div>
                 <div class="col">
-                    <p>Estoy cursando el ultimo año de la Tecnicatura universitaria en sistemas informaticos en la
-                        UTN-FRA</p>
-                    <p>Me gusta aprender cosas nuevas y aprender haciendo</p>
-                    <p>Tomador Numero#1 de mate</p>
-                    <p>Hincha apasionado de Boca </p>
-                    <p>Disfruto escuchar rock nacional y tomar cafe</p>
+                    <p>
+                        Soy un programador que vive en Carmen de Areco, Buenos Aires. <br>
+                        Desde chico siempre estuve muy interesado en la tecnologia, aunque no fue hasta los 18 anos que
+                        me decidi estudiar programacion. <br>
+                        Actualmente estoy cursando el ultimo año para ser Tecnico Universitario en Sistemas, en la
+                        UTN-FRA.
+                    </p>
+                    <p>
+                        Aunque tengo conocimiento en una amplia variedad de tecnologias, MEAN es mi stack preferido para
+                        trabajar <br>
+                        Me gusta estar en continuo aprendizaje, tanto de cosas nuevas como espeacializarme en las que ya
+                        se.
+                        Actualmente me encuentro profundizando en node y express
+                    </p>
                 </div>
             </div>
 
@@ -144,13 +152,18 @@
                     <span>Java</span>
                 </div>
                 <div class="col">
+                    <img src="./assets/iconos/springboot.png" width="64px" alt="">
+                    <span>Spring Boot</span>
+                </div>
+                <div class="col">
                     <img src="./assets/iconos/node.png" width="64px" alt="">
                     <span>Node js</span>
                 </div>
                 <div class="col">
-                    <img src="./assets/iconos/springboot.png" width="64px" alt="">
-                    <span>Spring Boot</span>
+                    <img src="./assets/iconos/mongodb.svg" width="64px" alt="">
+                    <span>MongoDB</span>
                 </div>
+
             </div>
 
         </section>
