--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         UTN-FRA.
                     </p>
                     <p>
-                        Aunque tengo conocimiento en una amplia variedad de tecnologias, MEAN es mi stack preferido para
-                        trabajar <br>
-                        Me gusta estar en continuo aprendizaje, tanto de cosas nuevas como espeacializarme en las que ya
+                        Aunque tengo conocimiento en una amplia variedad de tecnologias, mis favoritas para trabajar son
+                        Angular y Nodejs <br>
+                        Me gusta estar en continuo aprendizaje, tanto de cosas nuevas como especializarme en las que ya
                         se.
-                        Actualmente me encuentro profundizando en node y express
+                        Actualmente me encuentro profundizando en Angular
                     </p>
                 </div>
             </div>
