--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                 <div class="blog-card">
                     <div class="meta">
-                        <div class="photo" style="background-image: url(/assets/img/Home\ -\ clinicaonline.png)">
+                        <div class="photo" style="background-image: url(./assets/img/Home\ -\ clinicaonline.png)">
                         </div>
                     </div>
                     <div class="description">
@@ -230,7 +230,7 @@
 
                 <div class="blog-card">
                     <div class="meta">
-                        <div class="photo" style="background-image: url(/assets/img/Home\ -\ Ida\ y\ Vuelta.png)">
+                        <div class="photo" style="background-image: url(./assets/img/Home\ -\ Ida\ y\ Vuelta.png)">
                         </div>
                     </div>
                     <div class="description">
